k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-api
  labels:
    app: driver-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: driver-api
  template:
    metadata:
      labels:
        app: driver-api
    spec:
      containers:
        - name: driver-api
          image: dickchest/driver-api:1.0.0
          ports:
            - containerPort: 8080
