k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-api
  labels:
    run: driver-api
spec:
  type: ClusterIP
  selector:
    app: driver-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
