k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dennis
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /driver-api
            backend:
              service:
                name: driver-api
                port:
                  number: 80
